--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!--Importe das Fontes-->
+    <!--Montserrat e Roboto-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    
+    
     <title>UniBli</title>
   </head>
   <body>
